--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.4.1",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "cypress open",
+    "e2e": "start-server-and-test start http://localhost:3000 cypress"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +47,10 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "@cypress/react": "^5.12.3",
+    "@cypress/webpack-dev-server": "^1.8.1",
+    "cypress": "^9.4.1",
+    "prettier": "^2.5.1",
+    "start-server-and-test": "^1.14.0"
   }
 }
